Fix patient information consult popup alignment and information display issue
Patient information consult popup alignment fix and missing allergies and antecedents information displayed

--- a/Sealena/appointments/static/appointments/css/update_consult.css
+++ b/Sealena/appointments/static/appointments/css/update_consult.css
@@ -49,7 +49,7 @@
     grid-template-columns: 40% 59%;
     grid-gap: 1%;
     padding: 10px;
-    top: 8.8%;
+    top: 5.9%;
     left: 5.3%;
     width: 40%;
     border-radius: 25px;
@@ -57,7 +57,7 @@
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     background-clip: padding-box;
-    z-index: 1;
+    z-index: 2;
 }
 
 .patient-information-popup__popup-text:after{
